<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Order</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:<xliff:g example="Vijaya" id="name">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_summary_cheese">Add Cheese? <xliff:g example="yes" id="addCheese">%s</xliff:g></string>
    <string name="order_summary_pepperoni">Add Pepperoni? <xliff:g example="yes" id="addPepperoni">%s</xliff:g></string>
    <string name="order_summary_beef">Add Beef? <xliff:g example="yes" id="addBeef">%s</xliff:g></string>
    <string name="order_summary_chicken">Add Chicken? <xliff:g example="yes" id="addChicken">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_pizza">Please select less than twenty pizzas</string>
    <string name="too_little_pizza">Please select at least one pizza</string>
    <string name="beef">Beef</string>
    <string name="cheese">Cheese</string>
    <string name="chicken">Chicken</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="summary">Summary</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="go_to_order">Go to Order</string>
    <string name="email">Email</string>
    <string name="nothing_here">Nothing Here.</string>
    <string name="textview">TextView</string>
    <string name="text">text</string>
</resources>